fix spacings and edit some texts

--- a/src/App.css
+++ b/src/App.css
@@ -73,13 +73,21 @@ main {
 }
 
 .page-title {
+  margin-top: 10px;
   font-size: 2em;
   font-weight: 300px;
+  color: #66d9ed;
+  text-align: center;
 }
 
 .page-body {
+  flex-direction: column;
+  flex: 1;
   font-size: 1.5em;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .form-container {
@@ -124,17 +132,6 @@ main {
   height: 100%;
 }
 
-.page-title {
-  text-align: center;
-}
-.page-body {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .project {
   display: flex;
   flex-direction: column;
@@ -157,4 +154,11 @@ main {
 .contact-form {
   display: flex;
   flex-direction: column;
+}
+
+.footer {
+  color: white;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
 }
